--- a/templates/chat.html
+++ b/templates/chat.html
@@ -13,13 +13,13 @@
     <div class="chat-messages" id="chatbox">
         <div class="bot-message">
             <div class="message-content">
-                Hello {{ user.name }}! I'm your accounting assistant. How can I help you today?
+                Hello {{ user.name }}! How can I help with accounting today?
             </div>
         </div>
     </div>
     
     <div class="chat-input">
-        <input type="text" id="userInput" placeholder="Type your accounting question...">
+        <input type="text" id="userInput" placeholder="Ask about invoices, expenses...">
         <button id="sendButton"><i class="fas fa-paper-plane"></i></button>
     </div>
 </div>
