--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,22 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
 <div class="chat-container">
     <div class="chat-header">
-        <h4><i class="fas fa-robot"></i> Accounting Assistant</h4>
-        <div class="user-info">
+        <h4><i class="fas fa-calculator"></i> Accounting Assistant</h4>
+        <div>
             <span>{{ user.name }}</span>
-            <a href="/logout" class="btn btn-sm btn-outline-danger">Logout</a>
+            <a href="/logout" class="btn btn-sm btn-light ml-2">
+                <i class="fas fa-sign-out-alt"></i>
+            </a>
         </div>
     </div>
     
-    <div class="chat-messages" id="chatbox">
-        <div class="bot-message">
-            <div class="message-content">
-                Hello {{ user.name }}! How can I help with accounting today?
-            </div>
-        </div>
-    </div>
+    <div class="chat-messages" id="chatbox"></div>
     
     <div class="chat-input">
         <input type="text" id="userInput" placeholder="Ask about invoices, expenses...">
